# portable-snippets

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  README.md  endian.h
atomic/: README.md  atomic.h
builtin/: README.md  builtin-gnu.h  builtin.h
check/: README.md  check.h
clock/: README.md  clock.h
cpu/: README.md  cpu.c  cpu.h
debug-trap/: README.md  debug-trap.h
endian/: README.md  endian.h
exact-int/: README.md  exact-int.h
explicit-bzero/: README.md  explicit-bzero.c  explicit-bzero.h  explicit_bzero.c
memset-explicit/: README.md  memset_explicit.c  memset_explicit.h
once/: README.md  once.h
random/: README.md  random.c  random.h
safe-math/: README.md  safe-math.h
tests/: CMakeLists.txt  atomic.c  builtin.c  clock.c  cpu.c  endian.c  explicit-bzero.c  once.c  random.c  safe-math.c  unaligned.c
tests/cmake/: AddCompilerFlags.cmake  FindClockGettime.cmake
unaligned/: README.md  unaligned.h
